--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ linkedin: # add your Linkedin handle
 email: # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: xcans # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
